bump java version to 22